--- a/control/content/index.html
+++ b/control/content/index.html
@@ -26,45 +26,53 @@
 				<div class="d-item">
 					<span class="icon icon-menu pull-left"></span>
 					<div class="media-holder pull-left">
-						<img src="http://www.placehold.it/80x50" class="border-radius-four border-grey">
+						<img src="http://www.placehold.it/80x50">
 					</div>
 					<div class="copy pull-right">
 						<span class="title ellipsis">Image Title</span>
-						<a class="text-primary text">Add Action</a>											
-						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+						<div class="pull-right">
+							<a class="text-primary text">Add Action</a>											
+							<span class="btn-icon btn-delete-icon btn-danger transition-third"><span>
+						</div>
 					</div>
 				</div>
 				<div class="d-item">
 					<span class="icon icon-menu pull-left"></span>
 					<div class="media-holder pull-left">
-						<img src="http://www.placehold.it/40x60" class="border-radius-four border-grey">
+						<img src="http://www.placehold.it/80x50">
 					</div>
 					<div class="copy pull-right">
 						<span class="title ellipsis">Image Title</span>
-						<a class="text-primary text">Add Action</a>											
-						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+						<div class="pull-right">
+							<a class="text-primary text">Add Action</a>											
+							<span class="btn-icon btn-delete-icon btn-danger transition-third"><span>
+						</div>
 					</div>
 				</div>
 				<div class="d-item">
 					<span class="icon icon-menu pull-left"></span>
 					<div class="media-holder pull-left">
-						<img src="http://www.placehold.it/33x20" class="border-radius-four border-grey">
+						<img src="http://www.placehold.it/80x50">
 					</div>
 					<div class="copy pull-right">
 						<span class="title ellipsis">Image Title</span>
-						<a class="text-primary text">Add Action</a>											
-						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+						<div class="pull-right">
+							<a class="text-primary text">Add Action</a>											
+							<span class="btn-icon btn-delete-icon btn-danger transition-third"><span>
+						</div>
 					</div>
 				</div>
 				<div class="d-item">
 					<span class="icon icon-menu pull-left"></span>
 					<div class="media-holder pull-left">
-						<img src="http://www.placehold.it/180x240" class="border-radius-four border-grey">
+						<img src="http://www.placehold.it/80x50">
 					</div>
 					<div class="copy pull-right">
 						<span class="title ellipsis">Image Title</span>
-						<a class="text-primary text">Add Action</a>											
-						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+						<div class="pull-right">
+							<a class="text-primary text">Add Action</a>											
+							<span class="btn-icon btn-delete-icon btn-danger transition-third"><span>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -146,8 +154,10 @@
 				<div class="copy pull-right">
 					<a class="text-primary"><span class="title ellipsis pull-left">Item Name</span></a>
 					<span class="title ellipsis pull-left">Item Summary</span>
-					<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
-					<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					<div class="pull-right">
+						<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
+						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					</div>
 				</div>
 			</div>
 			<div class="d-item double-line square-icon clearfix">
@@ -158,8 +168,10 @@
 				<div class="copy pull-right">
 					<a class="text-primary"><span class="title ellipsis pull-left">Item Name</span></a>
 					<span class="title ellipsis pull-left">Item Summary</span>
-					<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
-					<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					<div class="pull-right">
+						<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
+						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					</div>
 				</div>
 			</div>
 			<div class="d-item double-line square-icon clearfix">
@@ -170,8 +182,10 @@
 				<div class="copy pull-right">
 					<a class="text-primary"><span class="title ellipsis pull-left">Item Name</span></a>
 					<span class="title ellipsis pull-left">Item Summary</span>
-					<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
-					<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					<div class="pull-right">
+						<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
+						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					</div>
 				</div>
 			</div>
 			<div class="d-item double-line square-icon clearfix">
@@ -182,8 +196,10 @@
 				<div class="copy pull-right">
 					<a class="text-primary"><span class="title ellipsis pull-left">Item Name</span></a>
 					<span class="title ellipsis pull-left">Item Summary</span>
-					<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
-					<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					<div class="pull-right">
+						<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
+						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					</div>
 				</div>
 			</div>
 			<div class="d-item double-line square-icon clearfix">
@@ -194,8 +210,10 @@
 				<div class="copy pull-right">
 					<a class="text-primary"><span class="title ellipsis pull-left">Item Name</span></a>
 					<span class="title ellipsis pull-left">Item Summary</span>
-					<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
-					<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					<div class="pull-right">
+						<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
+						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					</div>
 				</div>
 			</div>
 			<div class="d-item double-line square-icon clearfix">
@@ -206,8 +224,10 @@
 				<div class="copy pull-right">
 					<a class="text-primary"><span class="title ellipsis pull-left">Item Name</span></a>
 					<span class="title ellipsis pull-left">Item Summary</span>
-					<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
-					<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					<div class="pull-right">
+						<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
+						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					</div>
 				</div>
 			</div>
 			<div class="d-item double-line square-icon clearfix">
@@ -218,8 +238,10 @@
 				<div class="copy pull-right">
 					<a class="text-primary"><span class="title ellipsis pull-left">Item Name</span></a>
 					<span class="title ellipsis pull-left">Item Summary</span>
-					<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
-					<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					<div class="pull-right">
+						<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
+						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					</div>
 				</div>
 			</div>
 			<div class="d-item double-line square-icon clearfix">
@@ -230,8 +252,10 @@
 				<div class="copy pull-right">
 					<a class="text-primary"><span class="title ellipsis pull-left">Item Name</span></a>
 					<span class="title ellipsis pull-left">Item Summary</span>
-					<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
-					<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					<div class="pull-right">
+						<span class="btn-icon btn-link-icon btn-primary transition-third" onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
+						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -347,7 +371,7 @@
 						<div class="col-md-7 padding-right-zero pull-left">
 							<span class="content ellipsis">http://www.thelinkgoeshereandifitslongitwillwraparound</span>
 						</div>
-						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"></span>
 					</div>
 				</div>
 				<div class="d-item double-line square-icon clearfix">
@@ -363,7 +387,7 @@
 						<div class="col-md-7 padding-right-zero pull-left">
 							<span class="content ellipsis">http://www.thelinkgoeshereandifitslongitwillwraparound</span>
 						</div>
-						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"></span>
 					</div>
 				</div>
 				<div class="d-item double-line square-icon clearfix">
@@ -379,7 +403,7 @@
 						<div class="col-md-7 padding-right-zero pull-left">
 							<span class="content ellipsis">http://www.thelinkgoeshereandifitslongitwillwraparound</span>
 						</div>
-						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"></span>
 					</div>
 				</div>
 				<div class="d-item double-line square-icon clearfix">
@@ -395,7 +419,7 @@
 						<div class="col-md-7 padding-right-zero pull-left">
 							<span class="content ellipsis">http://www.thelinkgoeshereandifitslongitwillwraparound</span>
 						</div>
-						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"><span>
+						<span class="btn-icon btn-delete-icon btn-danger transition-third" onclick="window.openDialog('remove.html', null, 'sm', null)"></span>
 					</div>
 				</div>
 			</div>
