--- a/control/content/index.html
+++ b/control/content/index.html
@@ -23,6 +23,8 @@
 
     <script src="app.js"></script>
     <script src="enums.js"></script>
+    <script src="services.js"></script>
+    <script src="filters.js"></script>
     <!-- Controllers -->
     <script src="controllers/content.home.controller.js"></script>
     <script src="controllers/content.media.controller.js"></script>
