--- a/widget/index.html
+++ b/widget/index.html
@@ -22,6 +22,9 @@
     <script src="assets/js/ng-infinite-scroll.js"></script>
     <!--app js-->
     <script src="app.js"></script>
+    <script src="enums.js"></script>
+    <script src="services.js"></script>
+    <script src="directives.js"></script>
     <!--controllers js-->
     <script src="controllers/widget.home.controller.js"></script>
     <script src="controllers/widget.media.controller.js"></script>
