--- a/control/content/index.html
+++ b/control/content/index.html
@@ -12,6 +12,8 @@
     <script src="../../../../scripts/angular/angular-route.min.js"></script>
     <script src="../../../../scripts/angular/angular-animate.min.js"></script>
     <script src="../../../../scripts/angular/ui-bootstrap.min.js"></script>
+    <script src="../../../../scripts/tinymce/tinymce.min.js"></script>
+    <script src="../../../../scripts/tinymce/ui-tinymce.js"></script>
 
     <!-- JS -->
     <script src="assets/js/jquery-ui.min.js"></script>
