--- a/control/content/index.html
+++ b/control/content/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html ng-app="mediaCenterContent">
 <head lang="en">
-	<!-- CSS -->
+    <!-- CSS -->
     <link href="../../../../styles/helper.css" rel="stylesheet">
     <link href="../../../../styles/siteIcons.css" rel="stylesheet">
+    <link href="assets/css/control.content.css" rel="stylesheet">
 
     <!--SDK js-->
     <script src="../../../../scripts/buildfire.js"></script>
@@ -25,6 +26,7 @@
     <script src="enums.js"></script>
     <script src="services.js"></script>
     <script src="filters.js"></script>
+    <script src="modals.js"></script>
     <!-- Controllers -->
     <script src="controllers/content.home.controller.js"></script>
     <script src="controllers/content.media.controller.js"></script>
@@ -32,7 +34,7 @@
 </head>
 <body>
 <div class="main_view">
-	<div class="content" ng-view=""></div>
+    <div class="content" ng-view=""></div>
 </div>
 </body>
 </html>
