BF-012: Bootstrapping of Design View

--- a/control/design/index.html
+++ b/control/design/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
-<html ng-app="mediaCenterManualEntriesPlugin">
+<html ng-app="mediaCenterDesign">
 <head lang="en">
 	<!-- CSS -->
+	<link href="../../../../styles/helper.css" rel="stylesheet">
+	<link href="../../../../styles/siteIcons.css" rel="stylesheet">
+
+	<!--SDK js-->
+	<script src="../../../../scripts/buildfire.js"></script>
+	<script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
+	<script src="../../../../scripts/angular/angular.min.js"></script>
+	<script src="../../../../scripts/angular/angular-route.min.js"></script>
+	<script src="../../../../scripts/angular/angular-animate.min.js"></script>
+	<script src="../../../../scripts/angular/ui-bootstrap.min.js"></script>
+
+	<!-- JS -->
+	<script src="assets/js/jquery-ui.min.js"></script>
+	<script src="assets/js/sortable.js"></script>
+	<script src="assets/js/ng-infinite-scroll.js"></script>
+	<script src="assets/js/angular-csv.js"></script>
+	<script src="assets/js/ng-clip.min.js"></script>
+	<script src="assets/js/ZeroClipboard.min.js"></script>
+
+	<script src="app.js"></script>
+	<script src="enums.js"></script>
+	<script src="services.js"></script>
+	<!-- Controllers -->
+	<script src="controllers/design.home.controller.js"></script>
+	<meta charset="UTF-8">
+</head>
+<body>
+<div class="main_view">
+	<div class="content" ng-view=""></div>
+</div>
+</body>
+</html>
+
+
+
+<!--
+<!DOCTYPE html>
+<html ng-app="mediaCenterManualEntriesPlugin">
+<head lang="en">
+	&lt;!&ndash; CSS &ndash;&gt;
     <link href="../../../../styles/helper.css" rel="stylesheet">
     <link href="../../../../styles/siteIcons.css" rel="stylesheet">
     
-	<!-- JS -->
+	&lt;!&ndash; JS &ndash;&gt;
     <script src="../../../../scripts/buildfire.js"></script>
     <script src="../../../../scripts/angular/angular.min.js"></script>
     <script src="../../../../scripts/angular/angular.min.js"></script>
@@ -170,4 +210,4 @@
     
 </script>
 </body>
-</html>
+</html>-->
