BF-012: Add background image functionality

--- a/control/design/index.html
+++ b/control/design/index.html
@@ -24,6 +24,7 @@
 	<script src="app.js"></script>
 	<script src="enums.js"></script>
 	<script src="services.js"></script>
+	<script src="filters.js"></script>
 	<!-- Controllers -->
 	<script src="controllers/design.home.controller.js"></script>
 	<meta charset="UTF-8">
