BF-020:Sync background with widget

--- a/widget/index.html
+++ b/widget/index.html
@@ -30,9 +30,9 @@
     <script src="controllers/widget.media.controller.js"></script>
 
 </head>
-<body class="scrollable">
+<body class="scrollable customBackground" ng-style="currentBackgroundImage">
 <div class="main_view">
-    <div class="content" ng-view=""></div>
+    <div style="display: none" class="content" ng-view=""></div>
 </div>
 </body>
 </html>
