--- a/widget/index.html
+++ b/widget/index.html
@@ -25,6 +25,7 @@
     <script src="enums.js"></script>
     <script src="services.js"></script>
     <script src="directives.js"></script>
+    <script src="filters.js"></script>
     <!--controllers js-->
     <script src="controllers/widget.home.controller.js"></script>
     <script src="controllers/widget.media.controller.js"></script>
