BF-022: On update layout update

--- a/widget/index.html
+++ b/widget/index.html
@@ -33,7 +33,7 @@
 </head>
 <body class="scrollable customBackground" ng-style="currentBackgroundImage">
 <div class="main_view">
-    <div style="display: none" class="content" ng-view=""></div>
+    <div class="content" ng-view=""></div>
 </div>
 </body>
 </html>
