BF-024: Carousel Implementation

--- a/widget/index.html
+++ b/widget/index.html
@@ -31,11 +31,14 @@
     <!--controllers js-->
     <script src="controllers/widget.home.controller.js"></script>
     <script src="controllers/widget.media.controller.js"></script>
-    <!--video js-->
+
+<!--carousel-->
+    <script src="../../../scripts/buildfireCarousel.js"></script>
 
 </head>
 <body class="scrollable customBackground" ng-style="currentBackgroundImage">
 <div class="main_view">
+
     <div class="content" ng-view=""></div>
 </div>
 </body>
