--- a/widget/index.html
+++ b/widget/index.html
@@ -35,6 +35,9 @@
 <!--carousel-->
     <script src="../../../scripts/buildfire/components/carousel/carousel.js"></script>
 
+    <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="../bower_components/videogular/videogular.min.js"></script>
+
 </head>
 <body class="scrollable customBackground" ng-style="currentBackgroundImage">
 <div class="main_view">
