--- a/widget/index.html
+++ b/widget/index.html
@@ -35,6 +35,9 @@
 <!--carousel-->
     <script src="../../../scripts/buildfire/components/carousel/carousel.js"></script>
 
+    <!-- Audio player-->
+    <script src="../../../scripts/buildfire/services/media/audioPlayer.js"></script>
+
 </head>
 <body class="scrollable customBackground" ng-style="currentBackgroundImage">
 <div class="main_view">
