--- a/widget/index.html
+++ b/widget/index.html
@@ -8,7 +8,6 @@
     <link href="../../../styles/helper.css" rel="stylesheet">
     <link href="../../../styles/siteIcons.css" rel="stylesheet">
     <link href="assets/css/widget.app.css" rel="stylesheet">
-    <link href="assets/css/video-js.css" rel="stylesheet">
     <!--SDK js-->
     <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
     <script src="../../../scripts/buildfire.js"></script>
@@ -21,7 +20,7 @@
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/sortable.js"></script>
     <script src="assets/js/ng-infinite-scroll.js"></script>
-    <script src="assets/js/video.js"></script>
+    <!--<script src="assets/js/video.js"></script>-->
     <!--app js-->
     <script src="app.js"></script>
     <script src="enums.js"></script>
@@ -37,7 +36,8 @@
 
     <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="../bower_components/videogular/videogular.min.js"></script>
-
+    <!--<script src="../bower_components/videogular-youtube/youtube.js"></script>-->
+    <script src="http://static.videogular.com/scripts/controls/latest/vg-controls.js"></script>
 </head>
 <body class="scrollable customBackground" ng-style="currentBackgroundImage">
 <div class="main_view">
