Video Player Improvements

--- a/widget/index.html
+++ b/widget/index.html
@@ -36,12 +36,13 @@
 
     <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="../bower_components/videogular/videogular.min.js"></script>
+    <script src="../bower_components/videogular-controls/vg-controls.min.js"></script>
+    <script src="../bower_components/videogular-overlay-play/vg-overlay-play.min.js"></script>
 
     <!-- Audio player-->
     <script src="../../../scripts/buildfire/services/media/audioPlayer.js"></script>
 
-    <!--<script src="../bower_components/videogular-youtube/youtube.js"></script>-->
-    <script src="http://static.videogular.com/scripts/controls/latest/vg-controls.js"></script>
+
 </head>
 <body class="scrollable customBackground" ng-style="currentBackgroundImage">
 <div class="main_view">
