Code refactored and add nowplaying state to widget

--- a/widget/index.html
+++ b/widget/index.html
@@ -30,6 +30,7 @@
     <!--controllers js-->
     <script src="controllers/widget.home.controller.js"></script>
     <script src="controllers/widget.media.controller.js"></script>
+    <script src="controllers/widget.nowplaying.controller.js"></script>
 
 <!--carousel-->
     <script src="../../../scripts/buildfire/components/carousel/carousel.js"></script>
