Show video as per aspect ratio, Non repeating background Image in Widget, Youtube/Vimeo Video Embed Support

--- a/widget/index.html
+++ b/widget/index.html
@@ -43,7 +43,8 @@
     <!-- Audio player-->
     <script src="../../../scripts/buildfire/services/media/audioPlayer.js"></script>
 
-
+    <!--Video Embeder for Vimeo Youtube-->
+    <script src="../bower_components/ng-videosharing-embed/build/ng-videosharing-embed.min.js"></script>
 </head>
 <body class="scrollable customBackground" ng-style="currentBackgroundImage">
 <div class="main_view">
