--- a/control/content/index.html
+++ b/control/content/index.html
@@ -29,6 +29,7 @@
     <script src="services.js"></script>
     <script src="filters.js"></script>
     <script src="modals.js"></script>
+    <script src="directives.js"></script>
     <!-- Controllers -->
     <script src="controllers/content.home.controller.js"></script>
     <script src="controllers/content.media.controller.js"></script>
