--- a/widget/index.html
+++ b/widget/index.html
@@ -35,16 +35,16 @@
 <!--carousel-->
     <script src="../../../scripts/buildfire/components/carousel/carousel.js"></script>
 
-    <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="../bower_components/videogular/videogular.min.js"></script>
-    <script src="../bower_components/videogular-controls/vg-controls.min.js"></script>
-    <script src="../bower_components/videogular-overlay-play/vg-overlay-play.min.js"></script>
+    <script src="assets/js/angular-sanitize.min.js"></script>
+    <script src="assets/js/videogular.min.js"></script>
+    <script src="assets/js/vg-controls.min.js"></script>
+    <script src="assets/js/vg-overlay-play.min.js"></script>
 
     <!-- Audio player-->
     <script src="../../../scripts/buildfire/services/media/audioPlayer.js"></script>
 
     <!--Video Embeder for Vimeo Youtube-->
-    <script src="../bower_components/ng-videosharing-embed/build/ng-videosharing-embed.min.js"></script>
+    <script src="assets/js/ng-videosharing-embed.min.js"></script>
 </head>
 <body class="scrollable customBackground" ng-style="currentBackgroundImage">
 <div class="main_view">
