--- a/widget/index.html
+++ b/widget/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <!-- CSS -->
-    <link href="../../../styles/bootstrap.css" rel="stylesheet">
+    <!--<link href="../../../styles/bootstrap.css" rel="stylesheet">-->
     <link href="../../../styles/helper.css" rel="stylesheet">
     <link href="../../../styles/siteIcons.css" rel="stylesheet">
     <link href="assets/css/widget.app.css" rel="stylesheet">
