#26 : Carousel not following standard functionality  Fixed

--- a/control/content/index.html
+++ b/control/content/index.html
@@ -15,6 +15,8 @@
     <script src="../../../../scripts/angular/ui-bootstrap.min.js"></script>
     <script src="../../../../scripts/tinymce/tinymce.min.js"></script>
     <script src="../../../../scripts/tinymce/ui-tinymce.js"></script>
+    <script src="../../../../scripts/sortable.min.js"></script>
+    <script src="../../../../scripts/buildfire/components/carousel/carousel.js"></script>
 
     <!-- JS -->
     <script src="assets/js/jquery-ui.min.js"></script>
