--- a/widget/index.html
+++ b/widget/index.html
@@ -7,6 +7,7 @@
     <!--<link href="../../../styles/bootstrap.css" rel="stylesheet">-->
     <link href="../../../styles/helper.css" rel="stylesheet">
     <link href="../../../styles/siteIcons.css" rel="stylesheet">
+    <link href="../../../scripts/owlCarousel/owlCarousel.css" rel="stylesheet">
     <link href="assets/css/widget.app.css" rel="stylesheet">
     <!--SDK js-->
     <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
@@ -15,9 +16,9 @@
     <script src="../../../scripts/angular/angular-route.min.js"></script>
     <script src="../../../scripts/angular/angular-animate.min.js"></script>
     <script src="../../../scripts/angular/ui-bootstrap.min.js"></script>
+    <script src="../../../scripts/owlCarousel/owlCarousel.js"></script>
     <!-- JS -->
     <script src="assets/js/jquery-ui.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/sortable.js"></script>
     <script src="assets/js/ng-infinite-scroll.js"></script>
     <!--app js-->
