Issue #43 fix for Int Testing platform

--- a/widget/index.html
+++ b/widget/index.html
@@ -47,7 +47,7 @@
     <!--Video Embeder for Vimeo Youtube-->
     <script src="assets/js/ng-videosharing-embed.min.js"></script>
 </head>
-<body class="scrollable customBackground" ng-style="currentBackgroundImage">
+<body class="scrollable customBackground" ng-style="currentBackgroundImage" ng-class="blackBackground ? 'blackBackground': ''" >
 <div class="main_view">
 
     <div class="content" ng-view=""></div>
