Added transition, Issue Fix #60 #58

--- a/control/content/index.html
+++ b/control/content/index.html
@@ -34,13 +34,13 @@
     <!-- Controllers -->
     <script src="controllers/content.home.controller.js"></script>
     <script src="controllers/content.media.controller.js"></script>
-
+    <link rel="stylesheet" href="../../../../styles/transitionAnimation.css">
 
     <meta charset="UTF-8">
 </head>
 <body>
 <div class="main_view">
-    <div class="content" ng-view=""></div>
+    <div class="content slide" ng-view=""></div>
 </div>
 </body>
 </html>
