#335: Link added even though cancel was clicked : Fixed

--- a/control/content/index.html
+++ b/control/content/index.html
@@ -17,6 +17,7 @@
     <script src="../../../../scripts/tinymce/ui-tinymce.js"></script>
     <script src="../../../../scripts/sortable.min.js"></script>
     <script src="../../../../scripts/buildfire/components/carousel/carousel.js"></script>
+    <script src="../../../../scripts/buildfire/components/actionItems/sortableList.js"></script>
 
     <!-- JS -->
     <script src="assets/js/jquery-ui.min.js"></script>
