--- a/widget/index.html
+++ b/widget/index.html
@@ -19,7 +19,6 @@
     <script src="../../../scripts/owlCarousel/owlCarousel.js"></script>
     <!-- JS -->
     <script src="assets/js/jquery-ui.min.js"></script>
-    <script src="assets/js/sortable.js"></script>
     <script src="assets/js/ng-infinite-scroll.js"></script>
     <!--app js-->
     <script src="app.js"></script>
@@ -49,7 +48,7 @@
     <script src="assets/js/ng-videosharing-embed.min.js"></script>
 </head>
 <body class="scrollable customBackground" ng-style="currentBackgroundImage" ng-class="blackBackground ? 'blackBackground': ''" >
-<div class="main_view">
+<div class="">
 
     <div class="content slide" ng-view=""></div>
 </div>
