--- a/widget/index.html
+++ b/widget/index.html
@@ -49,15 +49,15 @@
 </head>
 <!--<body class="scrollable customBackground" ng-style="currentBackgroundImage"
       ng-class="blackBackground ? 'blackBackground': ''">-->
-<body class="body-scroll">
+<body class="body-scroll" data-ng-attr-style="background:url({{ backgroundImage}}) !important; background-size:cover;">
 <div class="main_view">
-    <div class="content slide infinite-scroll-parent" ng-show="showFeed">
+    <div class="content slide infinite-scroll-parent relative  no-background" ng-show="showFeed">
         <div ng-controller="WidgetHomeCtrl as WidgetHome">
             <div ng-include="'templates/home.html'">
             </div>
         </div>
     </div>
-    <div ng-view="" class="slide content" ng-if="!showFeed"></div>
+    <div ng-view="" class="slide content relative  no-background" ng-if="!showFeed"></div>
     <div class="ng-hide" ng-click="showFeed = true;" id="showFeedBtn"></div>
 </div>
 </body>
