Removed the relative class from widget

--- a/widget/index.html
+++ b/widget/index.html
@@ -57,7 +57,7 @@
             </div>
         </div>
     </div>
-    <div ng-view="" class="slide content relative  no-background" ng-if="!showFeed"></div>
+    <div ng-view="" class="slide content  no-background" ng-if="!showFeed"></div>
     <div class="ng-hide" ng-click="showFeed = true;" id="showFeedBtn"></div>
 </div>
 </body>
