--- a/widget/index.html
+++ b/widget/index.html
@@ -51,13 +51,13 @@
       ng-class="blackBackground ? 'blackBackground': ''">-->
 <body class="body-scroll" data-ng-attr-style="background:url({{ backgroundImage | cropImage:deviceWidth:deviceHeight:true}}) !important; background-size:cover;">
 <div class="main_view">
-    <div id="feedView" class="content slide infinite-scroll-parent  no-background" ng-show="showFeed">
+    <div id="feedView" class="content slide infinite-scroll-parent" ng-show="showFeed">
         <div ng-controller="WidgetHomeCtrl as WidgetHome">
             <div ng-include="'templates/home.html'">
             </div>
         </div>
     </div>
-    <div ng-view="" class="slide content  no-background" ng-if="!showFeed"></div>
+    <div ng-view="" class="slide content" ng-if="!showFeed"></div>
     <div class="ng-hide" ng-click="showFeed = true;" id="showFeedBtn"></div>
 </div>
 </body>
