Replaced old placeholder images with new one

--- a/control/content/index.html
+++ b/control/content/index.html
@@ -31,6 +31,7 @@
     <script src="enums.js"></script>
     <script src="services.js"></script>
     <script src="filters.js"></script>
+    <script src="directives.js"></script>
     <script src="modals.js"></script>
     <!-- Controllers -->
     <script src="controllers/content.home.controller.js"></script>
