Replaced top image and audio image adding with buildfire thumbnail component

--- a/control/content/index.html
+++ b/control/content/index.html
@@ -18,6 +18,8 @@
     <script src="../../../../scripts/sortable.min.js"></script>
     <script src="../../../../scripts/buildfire/components/carousel/carousel.js"></script>
     <script src="../../../../scripts/buildfire/components/actionItems/sortableList.js"></script>
+    <script
+       src="../../../../scripts/buildfire/components/images/thumbnail.js"></script>
 
     <!-- JS -->
     <script src="assets/js/jquery-ui.min.js"></script>
