--- a/widget/index.html
+++ b/widget/index.html
@@ -67,6 +67,25 @@
          ng-if="!showFeed"></div>
 
     <div class="ng-hide" ng-click="showFeed = true;" id="showFeedBtn"></div>
+    <a class="ng-hide" href="javascript:void callPlayer(&quot;ytPlayer&quot;,&quot;pauseVideo&quot;)">Pause</a>
 </div>
 </body>
+<script>
+    function callPlayer(frame_id, func, args) {
+        if (window.jQuery && frame_id instanceof jQuery) frame_id = frame_id.get(0).id;
+        var iframe = document.getElementById(frame_id);
+        if (iframe && iframe.tagName.toUpperCase() != 'IFRAME') {
+            iframe = iframe.getElementsByTagName('iframe')[0];
+        }
+        if (iframe) {
+            // Frame exists,
+            iframe.contentWindow.postMessage(JSON.stringify({
+                "event": "command",
+                "func": func,
+                "args": args || [],
+                "id": frame_id
+            }), "*");
+        }
+    }
+</script>
 </html>
