Needs to be space above the carousel in the editor : Fixed

--- a/control/content/index.html
+++ b/control/content/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 <div class="main_view">
-    <div class="content slide  infinite-scroll-parent" ng-view=""></div>
+    <div class="content slide relative infinite-scroll-parent" ng-view=""></div>
 </div>
 </body>
 </html>
