--- a/control/content/index.html
+++ b/control/content/index.html
@@ -22,9 +22,9 @@
        src="../../../../scripts/buildfire/components/images/thumbnail.js"></script>
 
     <!-- JS -->
-    <script src="assets/js/jquery-ui.min.js"></script>
+    <script src="../../../../scripts/jquery/jquery-ui.min.js"></script>
     <script src="assets/js/sortable.js"></script>
-    <script src="assets/js/ng-infinite-scroll.custom.js"></script>
+    <script src="../../../../scripts/angular/ng-infinite-scroll.custom.js"></script>
     <script src="assets/js/angular-csv.js"></script>
     <script src="assets/js/ng-clip.min.js"></script>
     <script src="assets/js/ZeroClipboard.min.js"></script>
