--- a/widget/index.html
+++ b/widget/index.html
@@ -19,7 +19,7 @@
     <script src="../../../scripts/angular/ui-bootstrap.min.js"></script>
     <script src="../../../scripts/owlCarousel/owlCarousel.js"></script>
     <!-- JS -->
-    <script src="assets/js/ng-infinite-scroll.custom.js"></script>
+    <script src="../../../scripts/angular/ng-infinite-scroll.custom.js"></script>
     <!--app js-->
     <script src="app.js"></script>
     <script src="enums.js"></script>
@@ -39,7 +39,7 @@
     <script src="assets/js/videogular.min.js"></script>
     <script src="assets/js/vg-controls.min.js"></script>
     <script src="assets/js/vg-overlay-play.min.js"></script>
-    <script src="assets/js/angular-touch.js"></script>
+    <script src="../../../scripts/angular/angular-touch.js"></script>
 
     <!-- Audio player-->
     <script src="../../../scripts/buildfire/services/media/audioPlayer.js"></script>
