jqeury ui for date added

--- a/control/content/index.html
+++ b/control/content/index.html
@@ -2,6 +2,7 @@
 <html ng-app="mediaCenterContent">
 <head lang="en">
     <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/jquery-ui.css"/>
     <link href="../../../../styles/helper.css" rel="stylesheet">
     <link href="../../../../styles/siteIcons.css" rel="stylesheet">
     <link href="assets/css/control.content.css" rel="stylesheet">
