--- a/control/content/index.html
+++ b/control/content/index.html
@@ -8,7 +8,7 @@
     <link href="assets/css/control.content.css" rel="stylesheet">
 
     <!--SDK js-->
-    <script src="../../../../scripts/buildfire.js"></script>
+    <script src="../../../../scripts/buildfire.min.js"></script>
     <script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
     <script src="../../../../scripts/angular/angular.min.js"></script>
     <script src="../../../../scripts/angular/angular-route.min.js"></script>
