--- a/control/design/index.html
+++ b/control/design/index.html
@@ -6,7 +6,7 @@
     <link href="../../../../styles/siteIcons.css" rel="stylesheet">
 
     <!--SDK js-->
-    <script src="../../../../scripts/buildfire.js"></script>
+    <script src="../../../../scripts/buildfire.min.js"></script>
     <script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
     <script src="../../../../scripts/angular/angular.min.js"></script>
     <script src="../../../../scripts/angular/angular-route.min.js"></script>
