--- a/widget/index.html
+++ b/widget/index.html
@@ -13,7 +13,7 @@
     <!--SDK js-->
     <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
     <script src="../../../scripts/smartcrop.js"></script>
-    <script src="../../../scripts/buildfire.js"></script>
+    <script src="../../../scripts/buildfire.min.js"></script>
     <script src="../../../scripts/angular/angular.min.js"></script>
     <script src="../../../scripts/angular/angular-route.min.js"></script>
     <script src="../../../scripts/angular/angular-animate.min.js"></script>
