Added search engine for title and description

--- a/control/content/index.html
+++ b/control/content/index.html
@@ -21,7 +21,8 @@
     <script src="../../../../scripts/buildfire/components/actionItems/sortableList.js"></script>
     <script
        src="../../../../scripts/buildfire/components/images/thumbnail.js"></script>
-
+    <script src="../../../../scripts/buildfire/services/searchEngine/searchEngine.js"></script>
+    
     <!-- JS -->
     <script src="../../../../scripts/jquery/jquery-ui.min.js"></script>
     <script src="assets/js/sortable.js"></script>
