--- a/widget/index.html
+++ b/widget/index.html
@@ -10,6 +10,7 @@
     <link href="../../../scripts/owlCarousel/owlCarousel.css" rel="stylesheet">
     <link rel="stylesheet" href="../../../styles/transitionAnimation.css">
     <link href="assets/css/widget.app.css" rel="stylesheet">
+    <link href="assets/css/videogular.css" rel="stylesheet">
     <!--SDK js-->
     <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
     <script src="../../../scripts/smartcrop.js"></script>
