--- a/widget/index.html
+++ b/widget/index.html
@@ -29,6 +29,7 @@
     <script src="directives.js"></script>
     <script src="filters.js"></script>
     <script src="modals.js"></script>
+    <script src="bookmarkHandler.js"></script>
     <!--controllers js-->
     <script src="controllers/widget.home.controller.js"></script>
     <script src="controllers/widget.media.controller.js"></script>
