--- a/widget/index.html
+++ b/widget/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../../../styles/transitionAnimation.css">
     <link href="assets/css/widget.app.css" rel="stylesheet">
     <link href="assets/css/videogular.css" rel="stylesheet">
+    <link href="assets/css/media.css" rel="stylesheet">
     <!--SDK js-->
     <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
     <script src="../../../scripts/smartcrop.js"></script>
