--- a/widget/index.html
+++ b/widget/index.html
@@ -47,6 +47,7 @@
 
     <!-- Audio player-->
     <script src="../../../scripts/buildfire/services/media/audioPlayer.js"></script>
+    <script src="../../../scripts/buildfire/services/notifications/localNotifications.js"></script>
 
     <!--Video Embeder for Vimeo Youtube-->
     <script src="assets/js/ng-videosharing-embed.min.js"></script>
