--- a/widget/index.html
+++ b/widget/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../../../styles/transitionAnimation.css">
     <link href="assets/css/widget.app.css" rel="stylesheet">
     <link href="assets/css/videogular.css" rel="stylesheet">
+    <link href="assets/css/media.css" rel="stylesheet">
     <!--SDK js-->
     <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
     <script src="../../../scripts/smartcrop.js"></script>
@@ -29,6 +30,7 @@
     <script src="directives.js"></script>
     <script src="filters.js"></script>
     <script src="modals.js"></script>
+    <script src="bookmarkHandler.js"></script>
     <!--controllers js-->
     <script src="controllers/widget.home.controller.js"></script>
     <script src="controllers/widget.media.controller.js"></script>
@@ -45,6 +47,7 @@
 
     <!-- Audio player-->
     <script src="../../../scripts/buildfire/services/media/audioPlayer.js"></script>
+    <script src="../../../scripts/buildfire/services/notifications/localNotifications.js"></script>
 
     <!--Video Embeder for Vimeo Youtube-->
     <script src="assets/js/ng-videosharing-embed.min.js"></script>
