--- a/control/settings/index.html
+++ b/control/settings/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	
-	<!-- Load helper.css to use our helper classes.
-	<link href="../../../../styles/helper.css" rel="stylesheet">
-	-->
-	
-	<!-- JS -->
-	<script src="../../../../scripts/buildfire.min.js"></script>
-   
- 	<!--
-    <script src="../../../../scripts/angular/angular.min.js"></script>
-    <script src="../../../../scripts/angular/ui-bootstrap.min.js"></script>
+<html ng-app="mediaCenterDesign">
+<head lang="en">
+    <!-- CSS -->
+    <link href="../../../../styles/helper.css" rel="stylesheet">
+    <link href="../../../../styles/siteIcons.css" rel="stylesheet">
 
+    <!--SDK js-->
+    <script src="../../../../scripts/buildfire.min.js"></script>
     <script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
-    -->
+    <script src="../../../../scripts/angular/angular.min.js"></script>
+    <script src="../../../../scripts/angular/angular-route.min.js"></script>
+    <script src="../../../../scripts/angular/angular-animate.min.js"></script>
+    <script src="../../../../scripts/buildfire/components/images/thumbnail.js"></script>
+
+
+    <!-- JS -->
+    <script src="app.js"></script>
+    <script src="enums.js"></script>
+    <script src="services.js"></script>
+    <!-- Controllers -->
+    <script src="controllers/settings.home.controller.js"></script>
+    <meta charset="UTF-8">
 </head>
 <body>
-    <span>Settings - Hello world!</span>
+<div class="main_view">
+    <div class="content" ng-view=""></div>
+</div>
 </body>
 </html>
