--- a/widget/index.html
+++ b/widget/index.html
@@ -44,6 +44,7 @@
     <script src="assets/js/vg-controls.min.js"></script>
     <script src="assets/js/vg-overlay-play.min.js"></script>
     <script src="../../../scripts/angular/angular-touch.js"></script>
+    <script src="../../../scripts/buildfire/components/toast/toast.js"></script>
 
     <!-- Audio player-->
     <script src="../../../scripts/buildfire/services/media/audioPlayer.js"></script>
