New Settings For AutoPlay

--- a/control/settings/index.html
+++ b/control/settings/index.html
@@ -4,6 +4,7 @@
     <!-- CSS -->
     <link href="../../../../styles/helper.css" rel="stylesheet">
     <link href="../../../../styles/siteIcons.css" rel="stylesheet">
+    <link href="./assets/css/control.settings.css" rel="stylesheet">
 
     <!--SDK js-->
     <script src="../../../../scripts/buildfire.min.js"></script>
