--- a/control/content/index.html
+++ b/control/content/index.html
@@ -43,9 +43,9 @@
     <link rel="stylesheet" href="../../../../styles/transitionAnimation.css">
     <meta charset="UTF-8">
 </head>
-<body>
+<body style="overflow:auto; overflow:initial;">
 <div class="main_view">
-    <div class="content slide relative infinite-scroll-parent" ng-view=""></div>
+    <div class="content infinite-scroll-parent" ng-view=""></div>
 </div>
 </body>
 </html>
