--- a/control/strings/index.html
+++ b/control/strings/index.html
@@ -5,6 +5,8 @@
     <link href="../../../../styles/helper.css" rel="stylesheet">
     <link href="../../../../styles/siteIcons.css" rel="stylesheet">
     <link href="./assets/css/control.strings.css" rel="stylesheet">
+    <link rel="stylesheet" href="../content/assets/css/reset.css">
+    <link rel="stylesheet" href="../content/assets/css/bf_base.css">
 
     <!--SDK js-->
     <script src="../../../../scripts/buildfire.min.js"></script>
