--- a/control/content/index.html
+++ b/control/content/index.html
@@ -4,6 +4,9 @@
 
     <!--SDK js-->
     <script src="../../../../scripts/buildfire.min.js"></script>
+
+    <script src="./mediaDateIndexing.js"></script>
+
     <script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
     <script src="../../../../scripts/angular/angular.min.js"></script>
     <script src="../../../../scripts/angular/angular-route.min.js"></script>
